--- a/templates/job.html
+++ b/templates/job.html
@@ -1,8 +1,8 @@
 
 <div > 
   <div style="border-bottom:1px solid grey" class="row">
-  <div style="font-size:20px" class ="col-9">
-        <h2>{{job['title']}}</h2>
+  <div style="font-size:15px" class ="col-9">
+        <h5 style="color:RGB(120 119 126)">{{job['title']}}</h5>
         <div>
           <b>Location : </b>{{job['location']}}
         </div>
@@ -10,7 +10,7 @@
           <b>Salary : </b>{{job['salary']}}
         </div>
   </div>
-  <div class ="col-3">
+  <div class ="col-3" style="text-align:end;">
     <a type="button" class="btn btn-outline-primary" href="mailto:adadadada.as?subject={{job['title']}}&body=My%20name%20%3A%20%3Cyour%20name%3E%0D%0AMy%20Resume%20%3A%20%3CResume%20Link%3E">Apply</a>  
   </div>
   </div>
