--- a/templates/home.html
+++ b/templates/home.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  {% include 'bootstrap.html' %}
   <title>Dk_Careers</title>
 </head>
 <body>
   <div class="container">
   <h1 class="text-center mb-3 mt-3"> Welcome To {{comp_name}} Career website</h1>
   <div class="text-center">
-    <img src="https://images.unsplash.com/photo-1568226625122-677036fac8a8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80">
+    <img src="https://images.pexels.com/photos/1542495/pexels-photo-1542495.jpeg" width="100%">
   </div>
   <h2 class="text-center mb-5 mt-5"> About Dk</h2>
   <p>
