--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -26,7 +26,8 @@
       <h5 style="display:inline;">Salary :</h5> 
       <p style="display:inline;">{{job.currency}} {{job.salary}}</p>
     </div>
-    
+    <br>
+    {% include 'application_form.html'%}
   </div>
 </body>
 </html>
