--- a/templates/application_form.html
+++ b/templates/application_form.html
@@ -3,20 +3,30 @@
 <!-- post will not show the submitted details on url -->
 <!-- post is more secured to access the details in app.py we have to use methods["post"]-->
 <form action="/job/{{job['id']}}/apply" method="post"> 
-  <div class="mb-2">
-    <label>Full name</label><br>
-  <input type="text" name="full_name" placeholder="John Prakash"><br>
+  <div class="mb-2 w-25">
+    <label class="font-monospace">Full name</label>
+  <input class="form-control" type="text" name="Full_name" placeholder="John Prakash">
   </div>
 
-  <div class="mb-2">
-    <label>Email</label><br>
-  <input type="text" name="email"placeholder="example@example.com"><br>
+  <div class="mb-2 w-25">
+    <label class="font-monospace">Email</label>
+  <input class="form-control" type="text" name="Email"placeholder="example@example.com">
   </div>
 
-  <div class="mb-2">
-    <label>LinkedIn URL</label><br>
-  <input type="text" name="LinkedInurl" placeholder="www.google.com"><br>
+  <div class="mb-2 w-25">
+    <label class="font-monospace">Education</label>
+  <input class="form-control" type="text" name="Education" placeholder="B.tech(MCE)">
+  </div>
+
+  <div class="mb-2 w-25">
+    <label class="font-monospace">Work Experience</label>
+  <input class="form-control" type="text" name="Work_Experience"placeholder="Intern at XYZ company">
   </div>
   
-  <input type="submit">
+  <div class="mb-2 w-25 ">
+    <label class="font-monospace">Resume URL</label>
+  <input class="form-control" type="text" name="Resume_url" placeholder="http://www.example.com/index.html">
+  </div>
+  
+  <input class="btn btn-primary" type="submit">
 </form> 
