--- a/templates/application_submitted.html
+++ b/templates/application_submitted.html
@@ -2,23 +2,15 @@
 <html lang="en">
 <head>
   <title>Applicant Info</title>
+  {% include 'bootstrap.html' %}
 </head>
 <body>
-  {% for r in application['full_name'] %}
 
-  <p>r</p>
-
-  {% endfor %}
-  <p>Your application has been Submitted</p>
-  
-  <h4>Full Name</h4>
-  <div>{{application['LinkedInurl']}}</div>
-  
-  <h4>Email</h4>
-  <div>{{application['LinkedInurl']}}</div>
-
-  <h4>LinkedIn URL</h4>
-  <div>{{application['LinkedInurl']}}</div>
-  
+  {% include 'nav.html' %}
+  <div class="text-center">
+    <h4> Thank You For applying, Your Form is Submitted Successfully </h4>
+  <h4> We will reach out to you soon </h4>
+  </div>
+  {% include 'footer.html' %}
 </body>
 </html>
