--- a/templates/home.html
+++ b/templates/home.html
@@ -8,11 +8,17 @@
   <div class="container">
   <h1 class="text-center mb-3 mt-3"> Welcome To {{comp_name}} Career website</h1>
   <div class="text-center">
-    <img src="https://images.pexels.com/photos/1542495/pexels-photo-1542495.jpeg" width="100%">
+    <img src="https://www.ringcentral.com/us/en/blog/wp-content/uploads/2020/07/Blog_How_to_Build_a_Great_Workplace_Experience_Social_Card_01-1.gif" width="100%">
   </div>
-  <h2 class="text-center mb-5 mt-5"> About Dk</h2>
+  <h2 class="text-center mb-3 mt-5"> About Dk</h2>
   <p>
-    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+Our company can range from small-scale operations to large multinational corporations. Examples of Our company include tech giants like Apple and Microsoft, fashion brands like Nike and Gucci, and consumer goods company like Procter & Gamble and Coca-Cola.
+
+In Our company, the focus is on designing and creating products that meet the needs and desires of their target market. These products may be physical goods, such as clothing or electronics, or digital products, such as software or apps.
+
+Our company often invest heavily in research and development to create innovative products and stay ahead of the competition. They may also focus on marketing and advertising to build brand awareness and drive sales.
+
+Overall, Our company are focused on creating, manufacturing, and selling physical or digital products that provide value to their customers.
   </p>
     <h2 class = "text-center">Open Positions</h2>
   <h4>
@@ -27,5 +33,6 @@
   <button class="btn btn-primary">Contact us</button>
 </div>
 </div>
+  {% include 'footer.html' %}
 </body>
 </html>
