--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" href="/">
     <img class = "ml-3"src="https://i.ibb.co/LnY9v7v/rr.jpg" width="30" height="40" class="inline" alt="">
    DK-Careers
   </a>
