--- a/templates/job.html
+++ b/templates/job.html
@@ -1,18 +1,21 @@
 {% include 'bootstrap.html' %}
-<div > 
-  <div style="border-bottom:1px solid grey" class="row">
-  <div style="font-size:15px" class ="col-9">
-        <h5 style="color:RGB(120 119 126)">{{job['title']}}</h5>
-        <div>
-          <b>Location : </b>{{job['location']}}
-        </div>
-        <div style="margin-bottom:5px">
-          <b>Salary : </b>{{job['salary']}}
-        </div>
+<div class="border-bottom row" style="margin-bottom:16px;padding-bottom:8px;">
+  <div class="col-10">
+    <h4 
+      style="color:rgb(120,120,120); margin-bottom:4px;">
+      {{job['title']}}
+    </h4>
+    <div>
+      <b>Location:</b> {{job['location']}}
+    </div>
+    {% if 'salary' in job %}
+    <div>
+      <b>Salary:</b> {{job['salary']}}
+    </div>
+    {% endif %}
   </div>
-  <div class ="col-3" style="text-align:end;">
-    <a href="/job/{{job['id']}}" type="button" class="btn btn-outline-primary">Apply</a>  
-<!-- giving route url in href -->
+  <div class="col-2 padding-right:16px">
+    <a href="/job/{{job['id']}}" type="button" class="btn btn-outline-primary float-right align-middle" >Apply</a>
   </div>
-  </div>
+  
 </div>
