--- a/templates/home.html
+++ b/templates/home.html
@@ -4,14 +4,14 @@
   {% include 'bootstrap.html' %}
   <title>Dk_Careers</title>
 </head>
-<body>
+<body style="background-image:url('https://rare-gallery.com/mocahbig/1338831-WhiteAbstract-Hexagon-4k-Ultra-HD-Wallpaper.png');  ">
   <div class="container">
-  <h1 class="text-center mb-3 mt-3"> Welcome To {{comp_name}} Career website</h1>
-  <div class="text-center">
-    <img src="https://www.ringcentral.com/us/en/blog/wp-content/uploads/2020/07/Blog_How_to_Build_a_Great_Workplace_Experience_Social_Card_01-1.gif" width="100%">
+  <h1 class="text-center mb-3 mt-3"> Welcome To Dk Careers website</h1>
+  <div class="text-center ">
+    <img class = "shadow p-3 bg-white rounded" style="background-size: cover;" src="https://www.ringcentral.com/us/en/blog/wp-content/uploads/2020/07/Blog_How_to_Build_a_Great_Workplace_Experience_Social_Card_01-1.gif" width="100%">
   </div>
   <h2 class="text-center mb-3 mt-5"> About Dk</h2>
-  <p>
+  <p class="bold">
 Our company can range from small-scale operations to large multinational corporations. Examples of Our company include tech giants like Apple and Microsoft, fashion brands like Nike and Gucci, and consumer goods company like Procter & Gamble and Coca-Cola.
 
 In Our company, the focus is on designing and creating products that meet the needs and desires of their target market. These products may be physical goods, such as clothing or electronics, or digital products, such as software or apps.
