--- a/templates/job.html
+++ b/templates/job.html
@@ -1,15 +1,15 @@
 {% include 'bootstrap.html' %}
-<div class="border-bottom row" style="margin-bottom:16px;padding-bottom:8px;">
+<div class="border-bottom border-dark row" style="margin-bottom:16px;padding-bottom:8px;">
   <div class="col-10">
-    <h4 
+    <h5
       style="color:rgb(120,120,120); margin-bottom:4px;">
       {{job['title']}}
-    </h4>
-    <div>
+    </h5>
+    <div style="font-size:large">
       <b>Location:</b> {{job['location']}}
     </div>
     {% if 'salary' in job %}
-    <div>
+    <div style="font-size:large">
       <b>Salary:</b> {{job['salary']}}
     </div>
     {% endif %}
