--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -4,7 +4,7 @@
   {% include 'bootstrap.html' %}
   <title>Document</title>
 </head>
-<body>
+<body style="background-image:url('https://rare-gallery.com/mocahbig/1338831-WhiteAbstract-Hexagon-4k-Ultra-HD-Wallpaper.png');  ">
   {% include 'nav.html' %}
   <div class="container">
     <h4 class="mt-4">{{job.title}}</h4>
