--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
   <div class="container">
   <h1 class="text-center mb-3 mt-3"> Welcome To Dk Careers website</h1>
   <div class="text-center ">
-    <img class = "shadow p-3 bg-white rounded" style="background-size: cover;" src="https://www.ringcentral.com/us/en/blog/wp-content/uploads/2020/07/Blog_How_to_Build_a_Great_Workplace_Experience_Social_Card_01-1.gif" width="100%">
+    <img class = "shadow p-3 rounded" style="background-size: cover;" src="https://www.ringcentral.com/us/en/blog/wp-content/uploads/2020/07/Blog_How_to_Build_a_Great_Workplace_Experience_Social_Card_01-1.gif" width="100%">
   </div>
   <h2 class="text-center mb-3 mt-5"> About Dk</h2>
   <p class="bold">
