--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,21 @@
 {% include 'bootstrap.html' %}
-<div style="top:25%; left:35%;" class="card w-25 shadow p-3">
+<body style="background-image:url('https://rare-gallery.com/mocahbig/1338831-WhiteAbstract-Hexagon-4k-Ultra-HD-Wallpaper.png');  ">
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="/">
+    <img class = "ml-3"src="https://i.ibb.co/LnY9v7v/rr.jpg" width="30" height="40" class="inline" alt="">
+   DK-Careers
+  </a>
+</nav>
+
+
+<div class="text-center"> <h4>Please Login to Continue </h4></div>
+<div style="top:25%; left:38%;" class="card w-25 shadow p-3">
   <div style="padding:25px;">
 <form action="/home" method="post">
   <!-- user input -->
   <div class="form-outline mb-4">
     <label class="form-label" for="form2Example1">User ID</label>
-    <input type="text" name="user_id" class="form-control w-50" placeholder="only integers" required/>
+    <input type="number" name="user_id" class="form-control w-50" placeholder="only integers" required/>
   </div>
 
   <!-- Password input -->
@@ -19,3 +29,5 @@
 </form>
   </div>
 </div>
+
+</body>  
